testdata/invalid/syntax/missing_name.pact
// Missing component name
component {
	id: string
}
